// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uikit/checkbox-group should renders correctly 1`] = `
<div
  className="checkboxGroup inline"
>
  <label
    className="checkboxWrapper checkboxWrapperColumn active"
    data-role="checkbox_group_val_1"
    key="val1"
  >
    <div
      className="icon"
      data-role="checkbox_group_icon_left_val_1"
    >
      left
    </div>
    <div
      className="icon"
      data-role="checkbox_group_icon_top_val_1"
    >
      top
    </div>
    <Checkbox
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value={true}
    />
    <div
      className="icon"
      data-role="checkbox_group_image_label_val_1"
    >
      label
    </div>
    <div
      className="icon"
      data-role="checkbox_group_icon_right_val_1"
    >
      right
    </div>
    <AText
      breed="body"
      className="label"
      data-role="checkbox_group_label_value_1"
      semibold={true}
      size="l"
    >
      Value1
    </AText>
  </label>
  <label
    className="checkboxWrapper active disabled"
    data-role="checkbox_group_val_2"
    key="val2"
  >
    <Checkbox
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value={true}
    />
    <AText
      breed="body"
      className="label"
      data-role="checkbox_group_label_value_2"
      semibold={true}
      size="l"
    >
      Value2
    </AText>
  </label>
</div>
`;

exports[`uikit/checkbox-group should renders correctly disabled=true 1`] = `
<div
  className="checkboxGroup inline disabled"
>
  <label
    className="checkboxWrapper disabled"
    data-role="checkbox_group_val_1"
    key="val1"
  >
    <Checkbox
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value={false}
    />
    <AText
      breed="body"
      className="label"
      data-role="checkbox_group_label_value_1"
      semibold={false}
      size="l"
    >
      Value1
    </AText>
  </label>
  <label
    className="checkboxWrapper disabled"
    data-role="checkbox_group_val_2"
    key="val2"
  >
    <Checkbox
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value={false}
    />
    <AText
      breed="body"
      className="label"
      data-role="checkbox_group_label_value_2"
      semibold={false}
      size="l"
    >
      Value2
    </AText>
  </label>
</div>
`;
